--- a/auction-annuity/css/main.css
+++ b/auction-annuity/css/main.css
@@ -12,6 +12,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /*
@@ -21,13 +22,13 @@ html {
  * These selection rule sets have to be separate.
  * Customize the background color to match your design.
  */
-/* line 27, main.scss */
+/* line 28, main.scss */
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
 }
 
-/* line 32, main.scss */
+/* line 33, main.scss */
 ::selection {
   background: #b3d4fc;
   text-shadow: none;
@@ -36,7 +37,7 @@ html {
 /*
  * A better looking default horizontal rule
  */
-/* line 41, main.scss */
+/* line 42, main.scss */
 hr {
   display: block;
   height: 1px;
@@ -51,7 +52,7 @@ hr {
  * images, videos and the bottom of their containers:
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
-/* line 61, main.scss */
+/* line 62, main.scss */
 audio,
 canvas,
 iframe,
@@ -64,7 +65,7 @@ video {
 /*
  * Remove default fieldset styles.
  */
-/* line 69, main.scss */
+/* line 70, main.scss */
 fieldset {
   border: 0;
   margin: 0;
@@ -74,7 +75,7 @@ fieldset {
 /*
  * Allow only vertical resizing of textareas.
  */
-/* line 79, main.scss */
+/* line 80, main.scss */
 textarea {
   resize: vertical;
 }
@@ -82,7 +83,7 @@ textarea {
 /* ==========================================================================
    Browser Upgrade Prompt
    ========================================================================== */
-/* line 87, main.scss */
+/* line 88, main.scss */
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
@@ -94,27 +95,49 @@ textarea {
    Author's custom styles
    ========================================================================== */
 /* line 99, main.scss */
+h1, h2, h3 {
+  font-family: 'Roboto Slab', serif;
+}
+
+/* line 103, main.scss */
+.align-left {
+  text-align: left;
+}
+
+/* line 107, main.scss */
 header, section, footer {
   width: 100%;
   float: left;
   text-align: center;
 }
-/* line 104, main.scss */
+/* line 112, main.scss */
+header .logo, section .logo, footer .logo {
+  width: 10em;
+}
+/* line 116, main.scss */
 header .section-padding, section .section-padding, footer .section-padding {
   padding: 20px;
   max-width: 1000px;
   margin: 0 auto;
 }
-/* line 110, main.scss */
+/* line 122, main.scss */
+header .padding, section .padding, footer .padding {
+  padding: 20px;
+}
+/* line 126, main.scss */
 header .side-padding, section .side-padding, footer .side-padding {
   padding: 0 20px;
 }
-/* line 115, main.scss */
+/* line 131, main.scss */
 header .col-1, section .col-1, footer .col-1 {
   width: 100%;
   text-align: left;
 }
-/* line 120, main.scss */
+/* line 136, main.scss */
+header .col-1.stages, section .col-1.stages, footer .col-1.stages {
+  text-align: center;
+}
+/* line 140, main.scss */
 header .col-3, section .col-3, footer .col-3 {
   width: 33.3%;
   margin: 0 auto;
@@ -122,7 +145,7 @@ header .col-3, section .col-3, footer .col-3 {
   float: left;
   text-align: left;
 }
-/* line 128, main.scss */
+/* line 148, main.scss */
 header .col-2, section .col-2, footer .col-2 {
   width: 50%;
   margin: 0 auto;
@@ -130,39 +153,42 @@ header .col-2, section .col-2, footer .col-2 {
   float: left;
   text-align: left;
 }
-/* line 136, main.scss */
+/* line 156, main.scss */
 header .footer-contact-col p, section .footer-contact-col p, footer .footer-contact-col p {
   margin-top: 0;
 }
-/* line 140, main.scss */
+/* line 160, main.scss */
 header .copyright .col-1, section .copyright .col-1, footer .copyright .col-1 {
   text-align: center;
 }
 
-/* line 145, main.scss */
+/* line 165, main.scss */
 label {
   display: block;
   margin: 1em 0 0.5em;
 }
 
-/* line 150, main.scss */
+/* line 170, main.scss */
 input {
   border: 1px solid #000;
   height: 1.5em;
-  width: 20em;
+  width: 100%;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
 }
 
-/* line 156, main.scss */
+/* line 179, main.scss */
 input#age {
   width: 6em;
 }
 
-/* line 161, main.scss */
+/* line 184, main.scss */
 #income-to-sell {
   display: inline-block;
 }
 
-/* line 165, main.scss */
+/* line 188, main.scss */
 #income-to-sell input {
   border: 0;
   display: inline-block;
@@ -172,11 +198,14 @@ input#age {
   border-bottom: 1px solid #000;
   line-height: 1.5em;
   margin: 0;
-  padding: 3px 6px;
+  padding: 3px 0;
   width: 6em;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
 }
 
-/* line 178, main.scss */
+/* line 204, main.scss */
 #currency, #per-year {
   display: inline-block;
   float: left;
@@ -185,7 +214,7 @@ input#age {
   padding: 3px 6px;
 }
 
-/* line 186, main.scss */
+/* line 212, main.scss */
 #currency {
   border-radius: 4px 0px 0px 4px;
   -moz-border-radius: 4px 0px 0px 4px;
@@ -193,7 +222,7 @@ input#age {
   border: 1px solid #000;
 }
 
-/* line 193, main.scss */
+/* line 219, main.scss */
 #per-year {
   border-radius: 0px 4px 4px 0px;
   -moz-border-radius: 0px 4px 4px 0px;
@@ -201,30 +230,206 @@ input#age {
   border: 1px solid #000;
 }
 
-/* line 200, main.scss */
+/* line 226, main.scss */
 .button {
   display: block;
   margin: 2em 0 0.5em;
   height: 2.5em;
+  line-height: 2.5em;
+  padding: 0;
   border: 0;
-  color: #fff;
+  color: white;
   background: black;
+  -webkit-transition: all .4s linear;
+  -moz-transition: all .4s linear;
+  -o-transition: all .4s linear;
+  transition: all .4s linear;
+  cursor: pointer;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  text-align: center;
+}
+
+/* line 246, main.scss */
+.button:hover {
+  color: black;
+  background: white;
+}
+
+/* line 251, main.scss */
+.register-scroll {
+  float: right;
+  margin-top: 15px;
+  width: 20em;
+}
+
+/* line 257, main.scss */
+ol {
+  counter-reset: li;
+  /* Initiate a counter */
+  margin-left: 0;
+  /* Remove the default left margin */
+  padding-left: 0;
+  /* Remove the default left padding */
+}
+
+/* line 262, main.scss */
+ol > li {
+  position: relative;
+  /* Create a positioning context */
+  list-style: none;
+  /* Disable the normal item numbering */
+  max-width: 75%;
+  margin: 4px auto;
+  background: #eee;
+  padding-top: 40px;
+}
+
+/* line 271, main.scss */
+ol > li.second-bg {
+  background: #f9f9f9;
+}
+
+/* line 275, main.scss */
+ol > li:before {
+  content: counter(li);
+  /* Use the counter as content */
+  counter-increment: li;
+  /* Increment the counter by 1 */
+  /* Position and style the number */
+  font-size: 2em;
+  line-height: 50px;
+  color: white;
+  margin-top: 20px;
+  font-family: 'Roboto Slab', serif;
+  z-index: 1;
+  position: relative;
+}
+
+/* line 291, main.scss */
+.circle {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background: black;
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: -25px;
+}
+
+/* line 304, main.scss */
+ol > li h3 {
+  margin-top: 0;
+}
+
+/* line 308, main.scss */
+.arrow-down {
+  border: 4px solid white;
+  width: 50px;
+  height: 50px;
+  background: #eee;
+  -ms-transform: rotate(45deg);
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(45deg);
+  position: absolute;
+  top: -49px;
+}
+
+/* line 320, main.scss */
+.arrow-down-mask {
+  height: 20px;
+  overflow: hidden;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  width: 58px;
+  margin-left: -29px;
+  z-index: 1;
+}
+
+/* line 331, main.scss */
+#back-to-top {
+  cursor: pointer;
+  float: right;
+}
+
+/* line 336, main.scss */
+i {
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 2px;
+  margin-left: 0.5em;
+}
+
+/* line 344, main.scss */
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
 }
 
 @media (max-width: 320px) {
   /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
 }
-@media (min-width: 480px) {
+@media (max-width: 480px) {
   /* smartphones, Android phones, landscape iPhone */
 }
-@media (min-width: 600px) {
+@media (max-width: 600px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+  /* line 358, main.scss */
+  header .side-padding, section .side-padding, footer .side-padding {
+    padding: 0;
+  }
+  /* line 361, main.scss */
+  header .col-3, section .col-3, footer .col-3 {
+    width: 100%;
+  }
+  /* line 365, main.scss */
+  header .col-2, section .col-2, footer .col-2 {
+    width: 100%;
+  }
+  /* line 368, main.scss */
+  header .copyright .col-1, section .copyright .col-1, footer .copyright .col-1 {
+    text-align: left;
+  }
+  /* line 371, main.scss */
+  header .copyright #back-to-top, section .copyright #back-to-top, footer .copyright #back-to-top {
+    width: 100%;
+    margin: 20px 0 40px;
+  }
+  /* line 376, main.scss */
+  header input, section input, footer input {
+    width: 100%;
+  }
+  /* line 380, main.scss */
+  header #register-scroll, section #register-scroll, footer #register-scroll {
+    width: 100%;
+  }
+  /* line 384, main.scss */
+  header ol > li, section ol > li, footer ol > li {
+    max-width: 100%;
+    margin: 40px 0;
+  }
 }
-@media (min-width: 801px) {
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media (max-width: 801px) {
+  /* tablet, landscape iPad, lo-res laptops and desktops */
 }
-@media (min-width: 1025px) {
+@media (min-width: 600px) and (max-width: 1025px) {
   /* big landscape tablets, laptops, and desktops */
+  /* line 395, main.scss */
+  header .col-3, section .col-3, footer .col-3 {
+    width: 100%;
+  }
+  /* line 399, main.scss */
+  header .footer-contact-col, section .footer-contact-col, footer .footer-contact-col {
+    width: 100%;
+  }
 }
 @media (min-width: 1281px) {
   /* hi-res laptops and desktops */
@@ -236,7 +441,7 @@ input#age {
 /*
  * Hide visually and from screen readers
  */
-/* line 245, main.scss */
+/* line 441, main.scss */
 .hidden {
   display: none !important;
 }
@@ -245,7 +450,7 @@ input#age {
  * Hide only visually, but have it available for screen readers:
  * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
-/* line 254, main.scss */
+/* line 450, main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -262,7 +467,7 @@ input#age {
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
-/* line 272, main.scss */
+/* line 468, main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -276,7 +481,7 @@ input#age {
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-/* line 285, main.scss */
+/* line 481, main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -292,7 +497,7 @@ input#age {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 302, main.scss */
+/* line 498, main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -301,7 +506,7 @@ input#age {
   /* 2 */
 }
 
-/* line 307, main.scss */
+/* line 503, main.scss */
 .clearfix:after {
   clear: both;
 }
@@ -323,7 +528,7 @@ input#age {
    http://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 @media print {
-  /* line 339, main.scss */
+  /* line 535, main.scss */
   *,
   *:before,
   *:after,
@@ -337,18 +542,18 @@ input#age {
     text-shadow: none !important;
   }
 
-  /* line 348, main.scss */
+  /* line 544, main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 352, main.scss */
+  /* line 548, main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 356, main.scss */
+  /* line 552, main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -357,13 +562,13 @@ input#age {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  /* line 366, main.scss */
+  /* line 562, main.scss */
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
   }
 
-  /* line 371, main.scss */
+  /* line 567, main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
@@ -374,23 +579,23 @@ input#age {
    * Printing Tables:
    * http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  /* line 381, main.scss */
+  /* line 577, main.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 386, main.scss */
+  /* line 582, main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 390, main.scss */
+  /* line 586, main.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 396, main.scss */
+  /* line 592, main.scss */
   p,
   h2,
   h3 {
@@ -398,7 +603,7 @@ input#age {
     widows: 3;
   }
 
-  /* line 402, main.scss */
+  /* line 598, main.scss */
   h2,
   h3 {
     page-break-after: avoid;
