--- a/auction-annuity/css/main.css
+++ b/auction-annuity/css/main.css
@@ -94,50 +94,50 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/* line 99, main.scss */
+/* line 103, main.scss */
 h1, h2, h3 {
   font-family: 'Roboto Slab', serif;
 }
 
-/* line 103, main.scss */
+/* line 107, main.scss */
 .align-left {
   text-align: left;
 }
 
-/* line 107, main.scss */
+/* line 111, main.scss */
 header, section, footer {
   width: 100%;
   float: left;
   text-align: center;
 }
-/* line 112, main.scss */
+/* line 116, main.scss */
 header .logo, section .logo, footer .logo {
   width: 10em;
 }
-/* line 116, main.scss */
+/* line 120, main.scss */
 header .section-padding, section .section-padding, footer .section-padding {
   padding: 20px;
   max-width: 1000px;
   margin: 0 auto;
 }
-/* line 122, main.scss */
+/* line 126, main.scss */
 header .padding, section .padding, footer .padding {
   padding: 20px;
 }
-/* line 126, main.scss */
+/* line 130, main.scss */
 header .side-padding, section .side-padding, footer .side-padding {
   padding: 0 20px;
 }
-/* line 131, main.scss */
+/* line 135, main.scss */
 header .col-1, section .col-1, footer .col-1 {
   width: 100%;
   text-align: left;
 }
-/* line 136, main.scss */
+/* line 140, main.scss */
 header .col-1.stages, section .col-1.stages, footer .col-1.stages {
   text-align: center;
 }
-/* line 140, main.scss */
+/* line 144, main.scss */
 header .col-3, section .col-3, footer .col-3 {
   width: 33.3%;
   margin: 0 auto;
@@ -145,7 +145,7 @@ header .col-3, section .col-3, footer .col-3 {
   float: left;
   text-align: left;
 }
-/* line 148, main.scss */
+/* line 152, main.scss */
 header .col-2, section .col-2, footer .col-2 {
   width: 50%;
   margin: 0 auto;
@@ -153,22 +153,22 @@ header .col-2, section .col-2, footer .col-2 {
   float: left;
   text-align: left;
 }
-/* line 156, main.scss */
+/* line 160, main.scss */
 header .footer-contact-col p, section .footer-contact-col p, footer .footer-contact-col p {
   margin-top: 0;
 }
-/* line 160, main.scss */
+/* line 164, main.scss */
 header .copyright .col-1, section .copyright .col-1, footer .copyright .col-1 {
   text-align: center;
 }
 
-/* line 165, main.scss */
+/* line 169, main.scss */
 label {
   display: block;
   margin: 1em 0 0.5em;
 }
 
-/* line 170, main.scss */
+/* line 174, main.scss */
 input {
   border: 1px solid #000;
   height: 1.5em;
@@ -178,17 +178,17 @@ input {
   -webkit-border-radius: 4px;
 }
 
-/* line 179, main.scss */
+/* line 183, main.scss */
 input#age {
   width: 6em;
 }
 
-/* line 184, main.scss */
+/* line 188, main.scss */
 #income-to-sell {
   display: inline-block;
 }
 
-/* line 188, main.scss */
+/* line 192, main.scss */
 #income-to-sell input {
   border: 0;
   display: inline-block;
@@ -205,7 +205,7 @@ input#age {
   -webkit-border-radius: 0;
 }
 
-/* line 204, main.scss */
+/* line 208, main.scss */
 #currency, #per-year {
   display: inline-block;
   float: left;
@@ -214,7 +214,7 @@ input#age {
   padding: 3px 6px;
 }
 
-/* line 212, main.scss */
+/* line 216, main.scss */
 #currency {
   border-radius: 4px 0px 0px 4px;
   -moz-border-radius: 4px 0px 0px 4px;
@@ -222,7 +222,7 @@ input#age {
   border: 1px solid #000;
 }
 
-/* line 219, main.scss */
+/* line 223, main.scss */
 #per-year {
   border-radius: 0px 4px 4px 0px;
   -moz-border-radius: 0px 4px 4px 0px;
@@ -230,7 +230,7 @@ input#age {
   border: 1px solid #000;
 }
 
-/* line 226, main.scss */
+/* line 230, main.scss */
 .button {
   display: block;
   margin: 2em 0 0.5em;
@@ -251,20 +251,20 @@ input#age {
   text-align: center;
 }
 
-/* line 246, main.scss */
+/* line 250, main.scss */
 .button:hover {
   color: black;
   background: white;
 }
 
-/* line 251, main.scss */
+/* line 255, main.scss */
 .register-scroll {
   float: right;
   margin-top: 15px;
   width: 20em;
 }
 
-/* line 257, main.scss */
+/* line 261, main.scss */
 ol {
   counter-reset: li;
   /* Initiate a counter */
@@ -274,7 +274,7 @@ ol {
   /* Remove the default left padding */
 }
 
-/* line 262, main.scss */
+/* line 266, main.scss */
 ol > li {
   position: relative;
   /* Create a positioning context */
@@ -282,16 +282,16 @@ ol > li {
   /* Disable the normal item numbering */
   max-width: 75%;
   margin: 4px auto;
-  background: #eee;
+  background: #eeeeee;
   padding-top: 40px;
 }
 
-/* line 271, main.scss */
+/* line 275, main.scss */
 ol > li.second-bg {
   background: #f9f9f9;
 }
 
-/* line 275, main.scss */
+/* line 279, main.scss */
 ol > li:before {
   content: counter(li);
   /* Use the counter as content */
@@ -307,7 +307,7 @@ ol > li:before {
   position: relative;
 }
 
-/* line 291, main.scss */
+/* line 295, main.scss */
 .circle {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -321,12 +321,12 @@ ol > li:before {
   margin-left: -25px;
 }
 
-/* line 304, main.scss */
+/* line 308, main.scss */
 ol > li h3 {
   margin-top: 0;
 }
 
-/* line 308, main.scss */
+/* line 312, main.scss */
 .arrow-down {
   border: 4px solid white;
   width: 50px;
@@ -341,7 +341,7 @@ ol > li h3 {
   top: -49px;
 }
 
-/* line 320, main.scss */
+/* line 324, main.scss */
 .arrow-down-mask {
   height: 20px;
   overflow: hidden;
@@ -353,13 +353,13 @@ ol > li h3 {
   z-index: 1;
 }
 
-/* line 331, main.scss */
+/* line 335, main.scss */
 #back-to-top {
   cursor: pointer;
   float: right;
 }
 
-/* line 336, main.scss */
+/* line 340, main.scss */
 i {
   border: solid black;
   border-width: 0 2px 2px 0;
@@ -368,12 +368,15 @@ i {
   margin-left: 0.5em;
 }
 
-/* line 344, main.scss */
+/* line 348, main.scss */
 .up {
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
 }
 
+/* ==========================================================================
+   Media Queries for Responsive Design.
+   ========================================================================== */
 @media (max-width: 320px) {
   /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
 }
@@ -382,36 +385,36 @@ i {
 }
 @media (max-width: 600px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
-  /* line 358, main.scss */
+  /* line 367, main.scss */
   header .side-padding, section .side-padding, footer .side-padding {
     padding: 0;
   }
-  /* line 361, main.scss */
+  /* line 370, main.scss */
   header .col-3, section .col-3, footer .col-3 {
     width: 100%;
   }
-  /* line 365, main.scss */
+  /* line 374, main.scss */
   header .col-2, section .col-2, footer .col-2 {
     width: 100%;
   }
-  /* line 368, main.scss */
+  /* line 377, main.scss */
   header .copyright .col-1, section .copyright .col-1, footer .copyright .col-1 {
     text-align: left;
   }
-  /* line 371, main.scss */
+  /* line 380, main.scss */
   header .copyright #back-to-top, section .copyright #back-to-top, footer .copyright #back-to-top {
     width: 100%;
     margin: 20px 0 40px;
   }
-  /* line 376, main.scss */
+  /* line 385, main.scss */
   header input, section input, footer input {
     width: 100%;
   }
-  /* line 380, main.scss */
+  /* line 389, main.scss */
   header #register-scroll, section #register-scroll, footer #register-scroll {
     width: 100%;
   }
-  /* line 384, main.scss */
+  /* line 393, main.scss */
   header ol > li, section ol > li, footer ol > li {
     max-width: 100%;
     margin: 40px 0;
@@ -422,11 +425,11 @@ i {
 }
 @media (min-width: 600px) and (max-width: 1025px) {
   /* big landscape tablets, laptops, and desktops */
-  /* line 395, main.scss */
+  /* line 404, main.scss */
   header .col-3, section .col-3, footer .col-3 {
     width: 100%;
   }
-  /* line 399, main.scss */
+  /* line 408, main.scss */
   header .footer-contact-col, section .footer-contact-col, footer .footer-contact-col {
     width: 100%;
   }
@@ -441,7 +444,7 @@ i {
 /*
  * Hide visually and from screen readers
  */
-/* line 441, main.scss */
+/* line 450, main.scss */
 .hidden {
   display: none !important;
 }
@@ -450,7 +453,7 @@ i {
  * Hide only visually, but have it available for screen readers:
  * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
-/* line 450, main.scss */
+/* line 459, main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -467,7 +470,7 @@ i {
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
-/* line 468, main.scss */
+/* line 477, main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -481,7 +484,7 @@ i {
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-/* line 481, main.scss */
+/* line 490, main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -497,7 +500,7 @@ i {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 498, main.scss */
+/* line 507, main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -506,29 +509,18 @@ i {
   /* 2 */
 }
 
-/* line 503, main.scss */
+/* line 512, main.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
-@media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    http://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 @media print {
-  /* line 535, main.scss */
+  /* line 528, main.scss */
   *,
   *:before,
   *:after,
@@ -542,18 +534,18 @@ i {
     text-shadow: none !important;
   }
 
-  /* line 544, main.scss */
+  /* line 537, main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 548, main.scss */
+  /* line 541, main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 552, main.scss */
+  /* line 545, main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -562,13 +554,13 @@ i {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  /* line 562, main.scss */
+  /* line 555, main.scss */
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
   }
 
-  /* line 567, main.scss */
+  /* line 560, main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
@@ -579,23 +571,23 @@ i {
    * Printing Tables:
    * http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  /* line 577, main.scss */
+  /* line 570, main.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 582, main.scss */
+  /* line 575, main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 586, main.scss */
+  /* line 579, main.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 592, main.scss */
+  /* line 585, main.scss */
   p,
   h2,
   h3 {
@@ -603,7 +595,7 @@ i {
     widows: 3;
   }
 
-  /* line 598, main.scss */
+  /* line 591, main.scss */
   h2,
   h3 {
     page-break-after: avoid;
